moneypacket.org
Email bitcoins as an attachment. No account or trusted third parties.
Tips: 1B2Bq6YXkguYWwBG68iDGFXzDcN89USryo

06/26/2015
moneypacket.org-v0.1
- Initial release

07/10/2015
moneypacket.org-v0.2
- Completely re-built to guide user through process
- Create a new money packet
- Import an existing money packet
- Withdraw to new money packet
- Withdraw to bitcoin address
- Add funds to existing money packet

07/12/2015
moneypacket.org-v0.21
- Clarified terminology around claiming vs sending vs receiving
- Moved transaction fee notice out of confirmation dialog
- Added notice that local currencies will fluctuate against market price of bitcoin
- Recommended Copay on claim to bitcoin address page
- Added background image for bling

07/14/2015
moneypacket.org-v0.22
- Enabled SSL/TSL
- Added BIP38 support
- Modified money packet format to support BIP38
- De-minified dependency files
- Increased iteration for SJCL encryption to 10000
- Stricter password requirements: at least 6 characters, one upper, one lower
- Added warning to not send packet with password
- Minor cosmetics

08/07/2015
moneypacket.org-v0.23
- Users can write personal notes in money packets
- Added timestamps and default notes to money packets
- Integrated tips into the process as yes/no
- Hyperlinked QR codes to open user's local wallet
- Changed download confirmation from checkbox to button for consistency
- Asynchronously load big dependencies for faster load times
- Cosmetics and wording

08/21/2015
moneypacket.org-v0.24
- Added mBTC as preferred unit option
- Removed password case requirements; password must be at least 6 characters
- Changed tip process to accept user input instead of yes/no
- Cosmetics and wording