@@ -161,7 +161,7 @@
 							<div class="button" id="claim_mp_done_another_link">Make another transaction</div>
 							<div class="button" id="claim_mp_done_home_link">Return to the home page</div>
 							<p>&nbsp;</p>
-							<p><img src="img/warning.jpg" class="warning_img">&nbsp;&nbsp;Don't send a money packet with its password.  Try to keep them separate.</p>
+							<p><img src="img/warning.jpg" class="warning_img">&nbsp;&nbsp;For security, don't send a money packet with its password.  Keep them separate.</p>
 						</div>
 					</div>
 					
@@ -254,12 +254,7 @@
 							<div id="new_mp_qrcode_address" style="text-align:center;"></div>
 							<div id="new_mp_add_btc_conversion" style="text-align:center;">&nbsp;</div>
 							<p id="new_mp_add_waiting" style="text-align:center;color:green;">Waiting for funds...</p>
-							<p>Optionally enter amounts to load and tip:
-							<div class="amt_container">
-								<div class="amt_row" style="background-color:rgba(255, 255, 255, 0.0);">Amount to load:<span class="amt_right"><span style="float:left" id="new_mp_add_amt_error"></span>&nbsp;<span class="unit_symbol"></span>&nbsp;<input type="text" placeholder="Optional" id="new_mp_add_amt">&nbsp;<span class="unit_code"></span></span></div>
-								<div class="amt_row" style="background-color:rgba(200, 200, 200, 0.2);">Amount to tip:<span class="amt_right"><span style="float:left" id="new_mp_tip_amt_error"></span>&nbsp;<span class="unit_symbol"></span>&nbsp;<input type="text" placeholder="0.00" id="new_mp_tip_amt">&nbsp;<span class="unit_code"></span></span></div>
-								<div class="amt_row" style="background-color:rgba(255, 255, 255, 0.0);"><hr style="margin:5px 0 0 0;padding:0">Total:<span class="amt_right"><span id="new_mp_total"><span class="unit_symbol"></span>&nbsp;<span class="mock_input" id="new_mp_total_amt"></span>&nbsp;<span class="unit_code"></span></span><span id="new_mp_total_msg"></span></span></div>
-							</div>
+							<p style="margin-top:10px;">Optionally enter an amount to load:&nbsp;<span class="unit_symbol"></span>&nbsp;<input placeholder="Optional" type="text" id="new_mp_add_amt">&nbsp;<span class="unit_code"></span>&nbsp;<span id="new_mp_add_amt_error"></span></p>
 						</div>
 					</div>
 					<div id="new_mp_add_done_page" class="page" style="display:none;">
@@ -272,16 +267,16 @@
 							<p>&nbsp;</p>
 							<div class="button" id="new_mp_add_home_link">Return to the home page</div>
 							<p>&nbsp;</p>
-							<p><img src="img/warning.jpg" class="warning_img">&nbsp;&nbsp;Don't send a money packet with its password.  Try to keep them separate.</p>
+							<p><img src="img/warning.jpg" class="warning_img">&nbsp;&nbsp;For security, don't send a money packet with its password.  Keep them separate.</p>
 						</div>
 					</div>
 				</div>
 				<div id="right_div"><img id="right_arrow" class="nav_arrow" src="img/arrow.png"></div>
 			</div>
 			<div id="footer_div">
-				<div id="footer_links"><a href="https://github.com/woodser/moneypacket.org" target="_blank">source</a> | <a href="changelog.txt" target="_blank">version 0.24 beta</a></div>
+				<div id="footer_links"><a href="https://github.com/woodser/moneypacket.org" target="_blank">source</a> | <a href="changelog.txt" target="_blank">version 0.25 beta</a></div>
 				<div id="tips">Tips: 1B2Bq6YXkguYWwBG68iDGFXzDcN89USryo</div>
-				<div id="legal">&#169;2015 moneypacket.org.  JavaScript copyrights included in the source.  No warranty.</div>
+				<div id="legal">&#169;2016 moneypacket.org.  JavaScript copyrights included in the source.  No warranty.</div>
 			</div>
 		</div>
 	</body>
